[gd_scene load_steps=4 format=3 uid="uid://c4xqleeujsqa7"]

[ext_resource type="Script" path="res://src/Scripts/Exterior/large_robot_leg.gd" id="1_o86xu"]
[ext_resource type="Texture2D" uid="uid://b25b777dwtwbw" path="res://Assets/Sprites/littleball.png" id="3_8vxd1"]
[ext_resource type="Texture2D" uid="uid://bppe4vj6r3w0x" path="res://Assets/Sprites/checker_32x.png" id="3_ss2x8"]

[node name="LargeRobotLeg" type="Node2D"]
script = ExtResource("1_o86xu")

[node name="LegTarget" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="LegTarget"]
visible = false
texture = ExtResource("3_ss2x8")

[node name="AnimationTarget" type="Node2D" parent="."]

[node name="Segment1" type="Sprite2D" parent="."]
texture = ExtResource("3_8vxd1")

[node name="Segment2" type="Sprite2D" parent="Segment1"]
texture = ExtResource("3_8vxd1")

[node name="Segment3" type="Sprite2D" parent="Segment1/Segment2"]
texture = ExtResource("3_8vxd1")

[node name="Segment4" type="Sprite2D" parent="Segment1/Segment2/Segment3"]
texture = ExtResource("3_8vxd1")

[node name="Segment5" type="Sprite2D" parent="Segment1/Segment2/Segment3/Segment4"]
texture = ExtResource("3_8vxd1")

[node name="Segment6" type="Sprite2D" parent="Segment1/Segment2/Segment3/Segment4/Segment5"]
texture = ExtResource("3_8vxd1")

[node name="Segment7" type="Sprite2D" parent="Segment1/Segment2/Segment3/Segment4/Segment5/Segment6"]
texture = ExtResource("3_8vxd1")

[node name="Segment8" type="Sprite2D" parent="Segment1/Segment2/Segment3/Segment4/Segment5/Segment6/Segment7"]
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_8vxd1")
